<resources>
    <string name="app_name">Buildify</string>
    <string name="prefs_file">cr.una.buildify.PREFERENCES_FILE_KEY</string>
    <string name="btnBuscar">Buscar</string>
    <string name="hintBusqueda">Escriba su búsqueda</string>
    <string name="direccion">Dirección</string>
    <string name="nombrePersona">Encargado</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo Electrónico</string>
    <string name="fecha">Fecha</string>
    <string name="observaciones">Observaciones</string>
    <string name="descripcionV">Descripción</string>
    <string name="etapa">Etapa</string>
    <string name="btnGuardar">Guardar observaciones</string>
    <string name="tituloServicio">Título</string>
    <string name="descripcionServicio">Descripción</string>
    <string name="tipo_de_servicio">Tipo de servicio</string>
    <string name="nombre_de_la_persona">Nombre de la persona</string>
    <string name="telefonoPersona">Teléfono</string>
    <string name="direccionPersona">Dirección</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="guardar_servicio">Guardar servicio</string>
    <string name="crearServ">Crear servicio</string>
    <string name="busquedaServ">Búsqueda de servicio</string>
    <string name="calificaciones">Calificaciones</string>
    <!-- Pantalla de Creación de proyectos -->
    <string name="TituloCrearProyecto">Nuevo Proyecto</string>
    <string name="hintNombreProyecto">Nombre del proyecto</string>
    <string name="hintPresupuesto">Presupuesto en la construcción</string>
    <string name="hintDescripcion">Descripción</string>
    <string name="btnCrearProyecto">Crear Proyecto</string>
    <!-- Pantalla de visualización de proyectos-->
    <string name="tvTipoProyecto">Tipo de proyecto: </string>
    <string name="tvDescripcionProyecto">Descripción:</string>
    <string name="tvPresupuestoProyecto">Presupuesto en la construcción: </string>
    <string name="tvCliente">Cliente: </string>
    <string name="btnEditarEquipo">Editar equipo de trabajo</string>
    <string name="busquedaProyecto">Buscar proyecto</string>
    <string name="btnEditar">Editar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnAgregar">Agregar</string>
    <!-- Pantalla de Adicion/Edicion del trabajador -->
    <string name="TituloFormularioTrabajador">Agregar Trabajador</string>
    <string name="hintNombreTrabajador">Nombre del trabajador</string>
    <string name="hintRolTrabajador">Rol del trabajador</string>
    <string name="hintCorreoTrabajador">Correo electrónico</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="buscar_trabajador">Buscar trabajador</string>
    <string name="title_activity_director_proyecto_drawer">director_proyecto_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="roles">
        <item>Director de Proyecto</item>
        <item>Dueño de la Obra</item>
        <item>Evaluador de la Obra</item>
        <item>Trabajador Independiente</item>
        <item>Usuario Invitado</item>
    </string-array>
    <string name="title_activity_duenno_obra_drawer">duenno_obra_drawer</string>
    <string name="title_activity_evaluador_obra_drawer">Evaluador_Obra_drawer</string>
    <string name="title_activity_trabajador_independiente_drawer">trabajador_independiente_drawer
    </string>
    <string name="title_activity_usuario_invitado_drawer">usuario_invitado_drawer</string>

    <string name="Title_Upload">Registrar Documentos a la Preconstrucción</string>
    <string name="Title_Upload2">Registrar Documentos de Permisos</string>
    <string name="Title_Upload3">Registrar Evidencia del Progreso</string>
    <string name="Preconstruction">Preconstrucción</string>
    <string name="Documentation">Documentos</string>
    <string name="Progress">Progreso</string>
    <string name="Type">Tipo de Documento</string>
    <string name="Name">Nombre del Documento</string>
    <string name="Archivo">Archivo</string>
    <string name="title_activity_cargar_archivos">cargar_archivos</string>
    <string name="title_document_type">Tipo de Documento</string>
    <string name="title_document_name">Nombre del Documento</string>
    <string name="title_archive">Archivo</string>
    <string name="save">Guardar</string>
    <string name="back">Volver</string>
    <string name="render">Renders</string>
    <string name="plans">Planos</string>
    <string name="virtual">Recorridos Virtuales</string>
    <string name="permissions">Permisos</string>
    <string name="evidence">Evidencia del Progreso</string>
    <string name="newArchive">Archivo Cargado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calificar">Calificar</string>
    <string name="calificacion">Calificación del servicio</string>
    <string name="calificar_servicio">Calificar servicio</string>
    <string name="window_datepicker_btn_hora">Seleccionar hora</string>
    <string name="lbl_date_selected">Fecha seleccionada:</string>
    <string name="txt_task_name">Nombre de la tarea</string>
    <string name="txt_task_desc">Descripcion de la tarea</string>
    <string name="txt_task_date_ini">Ingrese hora de inicio</string>
    <string name="txt_task_date_fin">Ingrese hora de finalización</string>
    <string name="lbl_proy_asignado">Proyecto asignado</string>
    <string name="btn_add_task">Crear tarea</string>


    <string name="name_visualization">Nombre</string>
    <string name="visualization_renders">Visualizar Renders del Proyecto</string>
    <string name="visualization_plans">Visualizar Planos del Proyecto</string>
    <string name="visualization_virtual">Visualizar Recorridos Virtuales del Proyecto</string>
    <string name="visualization_documentos">Visualizar Documentos del Proyecto</string>
    <string name="visualization_progress">Visualizar Evidencia del Progreso del Proyecto</string>
    <string name="title_visualization">Visualizar</string>
    <string name="next">Siguiente</string>


    <string name="titulovisualizarDetalle">Visualizar Solicitud Detalle de Obra</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="chkboxCambiarDirector">Confirmo que quiero cambiar al Director del Proyecto</string>
    <string name="spnCambiarDirector">Selecciona un Director</string>
    <string name="tvCambiarDirector">Cambiar Director del Proyecto</string>
    <string name="hint_tvSpnDirectores">Seleccione al nuevo Director del Proyecto</string>
    <string name="hintEtBuscarDirector">Buscar…</string>
    <string name="seleccione_un_director">Seleccione un Director</string>
    <string name="cDDirector">Cambiar director de Proyecto</string>
    <string name="hint_tvSpnClientes">Seleccione al Dueño de la obra</string>

</resources>