<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/director_Proyecto_Main">

    <fragment
        android:id="@+id/nav_home"
        android:name="cr.una.buildify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cr.una.buildify.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cr.una.buildify.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/director_Proyecto_Main"
        android:name="cr.una.buildify.ui.director_proyecto.Director_Proyecto_Main"
        android:label="fragment_director__proyecto__main"
        tools:layout="@layout/fragment_director__proyecto__main" />
</navigation>