<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editarEquipo.CambiarDirectorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvCambiarDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/tvCambiarDirector"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkbxConfirmarCambio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:backgroundTint="#673AB7"
            android:checked="false"
            android:text="@string/chkboxCambiarDirector"
            app:layout_constraintStart_toStartOf="@+id/tvSpnDirectores"
            app:layout_constraintTop_toBottomOf="@+id/tvSpnDirectores"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnCancelarCambioDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btnCancelar"
            android:textColor="#616161"
            app:layout_constraintBottom_toBottomOf="@+id/btnAceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toEndOf="@+id/btnAceptar"
            app:layout_constraintTop_toTopOf="@+id/btnAceptar"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="36dp"
            android:text="@string/btnAceptar"
            android:textColor="#5D4037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkbxConfirmarCambio" />

        <TextView
            android:id="@+id/tvSpnDirectores"
            android:layout_width="373dp"
            android:layout_height="48dp"
            android:layout_marginTop="68dp"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@drawable/ic_dropdown"
            android:hint="@string/hint_tvSpnDirectores"
            android:paddingTop="12dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCambiarDirector"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>