<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".trabajador_independiente.RegistrarServicio" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200">

        <EditText
            android:id="@+id/etTituloServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/tituloServicio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvInformacion"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/tvInformacion"
            app:layout_constraintTop_toBottomOf="@+id/tvInformacion"
            app:layout_constraintVertical_bias="0.114" />

        <EditText
            android:id="@+id/etDescripción"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/descripcionServicio"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etTituloServicio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etTituloServicio"
            app:layout_constraintTop_toBottomOf="@+id/etTituloServicio"
            app:layout_constraintVertical_bias="0.017" />

        <EditText
            android:id="@+id/etTipoServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/tipo_de_servicio"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etDescripción"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etDescripción"
            app:layout_constraintTop_toBottomOf="@+id/etDescripción"
            app:layout_constraintVertical_bias="0.022" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telefonoPersona"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etNombrePersona"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etNombrePersona"
            app:layout_constraintTop_toBottomOf="@+id/etNombrePersona"
            app:layout_constraintVertical_bias="0.032" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/direccionPersona"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etTelefono"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etTelefono"
            app:layout_constraintTop_toBottomOf="@+id/etTelefono"
            app:layout_constraintVertical_bias="0.029" />

        <EditText
            android:id="@+id/etCorreoElectronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:width="300dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etDireccion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etDireccion"
            app:layout_constraintTop_toBottomOf="@+id/etDireccion"
            app:layout_constraintVertical_bias="0.044" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/botones"
            android:backgroundTint="@color/iconoapp_background"
            android:text="@string/guardar_servicio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etCorreoElectronico"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="@+id/etCorreoElectronico"
            app:layout_constraintTop_toBottomOf="@+id/etCorreoElectronico"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvInformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/datos"
            android:textColor="@color/iconoapp_background"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etNombrePersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:width="300dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/nombre_de_la_persona"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#595757"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etTipoServicio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etTipoServicio"
            app:layout_constraintTop_toBottomOf="@+id/etTipoServicio"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
