<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creacionProyecto.CrearProyecto">

    <TextView
        android:id="@+id/tvTituloFormularioTrabajador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/TituloCrearProyecto"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/etNombreProyecto"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintNombreProyecto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloFormularioTrabajador"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/spTipoProyecto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etNombreProyecto"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etNombreProyecto"
        app:layout_constraintTop_toBottomOf="@+id/etNombreProyecto"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spTipoMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etNombreProyecto"
        app:layout_constraintTop_toBottomOf="@+id/spTipoProyecto"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etPresupuestoProyecto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hintPresupuesto"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/spTipoMoneda"
        app:layout_constraintEnd_toEndOf="@+id/etNombreProyecto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spTipoMoneda"
        app:layout_constraintTop_toTopOf="@+id/spTipoMoneda"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etMtlDescripcionProyecto"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintDescripcion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPresupuestoProyecto"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/spTipoMoneda"
        app:layout_constraintTop_toBottomOf="@+id/spTipoProyecto"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/btnCrearProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCrearProyecto"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMtlDescripcionProyecto"
        app:layout_constraintVertical_bias="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>