<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clRecyclerServicios"
    android:background="@color/teal_200"
    tools:context=".servicios.buscarServicioFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/busquedaServ"
        android:textAlignment="center"
        android:textColor="@color/iconoapp_background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvServicios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBusqueda"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etBusqueda"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginBottom="492dp"

        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintBusqueda"
        android:inputType="textPersonName"

        android:minHeight="52dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.098"
        tools:ignore="Autofill,TouchTargetSizeCheck"
        tools:targetApi="p" />

    <Button
        android:id="@+id/btnBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/forma"
        android:backgroundTint="@color/backgroundColor"
        android:text="@string/btnBuscar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etBusqueda"
        app:layout_constraintStart_toEndOf="@+id/etBusqueda"
        app:layout_constraintTop_toTopOf="@+id/etBusqueda"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>